# agkit.io-topography

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  build_deployment.sh  entry.sh  pyproject.toml  requirements.txt
app/: color_schemes.py  downloader.py  geocolorize.py  geoworker.py  grass_handler.py  handler.py  poster.py  reducers.py  settings.py  ziphandler.py
deploy/: deploy.sh  main.tf  outputs.tf  variables.tf  versions.tf
docs/: blended-topo-feature.md  contour-feature.md  flowlines-feature.md  watershed-bounded-flow-feature.md  wishlist.md
tests/: _gary_diag.py  _gary_probe.py  _gary_slopearea.py  _gary_sweep.py  field_1176_boundary.json  field_369_boundary.json  gary_east_boundary.geojson  test_contour_lines.py  test_flowlines.py  test_geoworker_dispatch.py  test_grass_watershed.py  test_handler.py  test_poster.py  test_watershed_domain.py  tests_lambda.py
tests/fixtures/: sqs_event.json  sqs_event_scalar.json
