[project]
name = "agkit-topography"
version = "0.1.0"
description = "USGS DEM-derived topography Lambda (elevation, slope, watershed, L, LS) for agkit.io."
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
    "requests>=2.31",
    # <2: base-image GDAL `gdal_array` is built against NumPy 1.x and
    # crashes on import under NumPy 2.x. See requirements.txt.
    "numpy>=1.26,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "tests_*.py"]
